# rp2040-rs232

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml  release.yml
3d-printed-case/: rp2040-rs232-Bottom.stl  rp2040-rs232-Top-no-dip-switch-window.stl  rp2040-rs232-Top.stl  rp2040-rs232-case.step
fabrication/: rp2040-rs232-BOM.csv  rp2040-rs232-CPL.csv
kicad/: fp-lib-table  rp2040-rs232.kicad_jobset  rp2040-rs232.kicad_pcb  rp2040-rs232.kicad_prl  rp2040-rs232.kicad_pro  rp2040-rs232.kicad_sch  sym-lib-table
kicad/DE-9.pretty/: C19077344.kicad_mod
kicad/DIP.pretty/: C92645.kicad_mod
kicad/MAX3243.pretty/: MAX3243.kicad_sym  SSOP-28_5.3x10.2mm_P0.65mm.kicad_mod
kicad/SOT-23-5.pretty/: SOT-23-5.kicad_mod
kicad/SW.pretty/: C720477.kicad_mod
multi-firmware/: CMakeLists.txt  combine.py  inject.cmake.in  memmap.ld.in
multi-firmware/dispatcher/: dispatcher.c
